綜合應用測驗/q2/k8s_manifest/asiayo/demo-env/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: asiayo
  namespace: asiayo
spec:
  selector:
    app: asiayo
  ports:
    - port: 1228
      targetPort: 1228
      name: http
