綜合應用測驗/q2/k8s_manifest/asiayo/demo-env/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asiayo
  namespace: asiayo
spec:
  ingressClassName: nginx
  rules:
    - host: asiayo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: asiayo
                port:
                  number: 1228
